<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.initialScreen.view.InitialScreenFragment">

        <ImageView
            android:id="@+id/ivlogo"
            android:layout_width="@dimen/size_270"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_70"
            android:layout_marginBottom="@dimen/size_20"
            android:contentDescription="@string/icon_description"
            android:src="@drawable/app_icon"
            app:layout_constraintBottom_toTopOf="@id/bvEnter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bvEnter"
            style="@style/button"
            android:text="@string/enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivlogo"
            app:layout_constraintBottom_toTopOf="@id/bvRegister"/>

        <Button
            android:id="@+id/bvRegister"
            style="@style/button"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bvEnter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>