<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:measureAllChildren="true"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.login.view.LoginFragment">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/size_200"
            android:layout_height="@dimen/size_150"
            android:layout_marginTop="@dimen/size_70"
            android:contentDescription="@string/icon_description"
            android:src="@drawable/app_icon"
            android:layout_marginBottom="@dimen/size_20"
            app:layout_constraintBottom_toTopOf="@id/ivAppName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivAppName"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_80"
            android:src="@drawable/app_name"
            android:layout_marginBottom="@dimen/size_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintBottom_toTopOf="@id/etEmail"/>

        <EditText
            android:id="@+id/etEmail"
            style="@style/edit_text"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/size_15"
            android:drawableEnd="@drawable/ic_email"
            android:drawableTint="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAppName"
            app:layout_constraintBottom_toTopOf="@id/etPassword"/>

        <EditText
            android:id="@+id/etPassword"
            style="@style/edit_text"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:drawableEnd="@drawable/ic_password"
            android:drawableTint="@color/light_gray"
            android:layout_marginBottom="@dimen/size_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintBottom_toTopOf="@id/bvEnter"/>

        <Button
            android:id="@+id/bvEnter"
            style="@style/button"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginBottom="@dimen/size_30"
            android:text="@string/enter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>